--- a/css/footable.mod.standalone.css
+++ b/css/footable.mod.standalone.css
@@ -1,7 +1,9 @@
+/** footable modified css (white&grey) **/
+
 .footable {
   border-collapse: separate;
   border-spacing: 0;
-  border: 1px solid #cccccc;
+  border: 0px solid #cccccc;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
@@ -9,6 +11,7 @@
   font-size: 14px;
   color: #444444;
   background: #ffffff;
+
 }
 .footable > thead > tr:first-child > th.footable-first-column,
 .footable > thead > tr:first-child > td.footable-first-column {
@@ -29,20 +32,15 @@
   border-radius: 6px 6px 0 0;
 }
 .footable > thead > tr > th {
-  border-left: 1px solid #cccccc;
-  border-top: 1px solid #cccccc;
+  border-left: 0px solid #cccccc;
+  border-top: 0px solid #cccccc;
   padding: 10px;
   text-align: left;
 }
 .footable > thead > tr > th,
 .footable > thead > tr > td {
-  background-color: #dce9f9;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ebf3fc), to(#dce9f9));
-  background-image: -webkit-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -moz-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -ms-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -o-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: linear-gradient(to bottom, #ebf3fc, #dce9f9);
+  background-color: #F5F5F5;
+  
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
@@ -54,7 +52,8 @@
   border-left: none;
 }
 .footable.breakpoint > tbody > tr.footable-row-detail {
-  background: #eeeeee;
+  background: #fbf8e9;
+
 }
 .footable.breakpoint > tbody > tr.footable-row-detail > .footable-row-detail-cell {
   border-left: none;
@@ -63,26 +62,19 @@
   vertical-align: middle;
 }
 .footable > tbody > tr:hover {
-  background: #fbf8e9;
+  background: #F5F5F5;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ebf3fc), to(#dce9f9));
+  background-image: -webkit-linear-gradient(top, #ebf3fc, #dce9f9);
+  background-image: -moz-linear-gradient(top, #ebf3fc, #dce9f9);
+  background-image: -ms-linear-gradient(top, #ebf3fc, #dce9f9);
+  background-image: -o-linear-gradient(top, #ebf3fc, #dce9f9);
+  background-image: linear-gradient(to bottom, #ebf3fc, #dce9f9);
 }
-.footable > tbody > tr:last-child > td.footable-first-column {
-  -moz-border-radius: 0 0 0 6px;
-  -webkit-border-radius: 0 0 0 6px;
-  border-radius: 0 0 0 6px;
-}
-.footable > tbody > tr:last-child > td.footable-last-column {
-  -moz-border-radius: 0 0 6px 0;
-  -webkit-border-radius: 0 0 6px 0;
-  border-radius: 0 0 6px 0;
-}
-.footable > tbody > tr:last-child > td.footable-first-column.footable-last-column {
-  -moz-border-radius: 0 0 6px 6px;
-  -webkit-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-}
+
 .footable > tbody > tr > td {
-  border-top: 1px solid #cccccc;
-  border-left: 1px solid #cccccc;
+
+  border-top: 0px solid #cccccc;
+  border-left: 0px solid #cccccc;
   padding: 10px;
   text-align: left;
 }
@@ -91,17 +83,11 @@
 }
 .footable > tfoot > tr > th,
 .footable > tfoot > tr > td {
-  background-color: #dce9f9;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ebf3fc), to(#dce9f9));
-  background-image: -webkit-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -moz-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -ms-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: -o-linear-gradient(top, #ebf3fc, #dce9f9);
-  background-image: linear-gradient(to bottom, #ebf3fc, #dce9f9);
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
-  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
-  border-top: 1px solid #cccccc;
+  background-color: #F5F5F5;
+  -moz-border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  border-top: 0px solid #cccccc;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   padding: 10px;
 }
@@ -115,9 +101,7 @@
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+
   background-color: #ffffff;
 }
 .footable .pagination > ul > li {
@@ -168,7 +152,7 @@
 .footable .pagination > ul > .disabled > a:focus {
   color: #cccccc;
   cursor: default;
-  background-color: #ebf3fc;
+  background-color: #f7f7f7;
 }
 .footable .pagination.pagination-centered {
   text-align: center;
@@ -177,5 +161,5 @@
   text-align: center;
 }
 .footable-odd {
-  background-color: #f7f7f7;
+  background-color: #FFFFFF;
 }
